# gbbai-quantization-llm-llamacpp

./: .gitignore  Makefile  README.md  pyproject.toml
infra/: abbreviations.json  main.bicep  main.bicepparam
infra/module/: ai-service-role-assignments.bicep  standard-dependent-resources.bicep  standard-ml-workspace.bicep
infra/scripts/: write_env.ps1  write_env.sh
notebooks/: quantization_llama_from_fine_tune.ipynb
src/: conda.yaml
src/core/: quantize_model.py  tracking_model.py
src/custom_loader/: chat_loader.py
src/utils/: utils.py
