[tool.poetry]
name = "fine-tuning-text-to-sql"
version = "0.1.0"
description = ""
authors = ["Karina Assini <karinaa@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "0.34.2"
bitsandbytes = "0.44.1"
black = "24.4.2"
datasets = "3.0.1"
flash-attn = "2.6.3"
ipykernel = "6.29.5"
mlflow = "2.19.0"
mltable = "1.6.1"
numpy = "< 2.0.0"
pandas = "^2.1.3"
pre-commit = "^3.6.0"
pyarrow = "^15.0.0"
pydantic-yaml = "^1.2.0"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"
python-dotenv = "1.0.1"
py7zr = "0.22.0"
setuptools = "72.1.0"
texttable = "1.7.0"
tiktoken = "0.7.0"
tqdm = "4.66.4"
wheel = "0.43.0"
llama-cpp-python = "0.3.6"
huggingface-hub = "0.27.1"
torch = "*"
transformers = "*"
sentencepiece = "*"
azure-ai-ml = "*"
azure-identity = "*"
azure-common = "*"
azure-core = "*"
azure-cosmos = "*"
azure-storage-blob = "*"
azure-storage-file-datalake = "*"
azure-storage-file-share = "*"
azureml-fsspec = "*"
azureml-core = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
